added first logger implementation (currently not working)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project(
         LANGUAGES C CXX
 )
 
+# global cmake variables
 set(CMAKE_CXX_STANDARD          23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS        OFF)
@@ -14,6 +15,10 @@ set(CMAKE_C_STANDARD            23)
 set(CMAKE_C_STANDARD_REQUIRED   ON)
 set(CMAKE_C_EXTENSIONS          OFF)
 
-set(EXECUTABLE_NAME             "pc-stm32-usb-program-windows")
+# project and library names
+set(EXECUTABLE_NAME             pc-stm32-usb-program-windows)
+set(TERMINAL_LOGGER_NAME        terminal_logger-lib)
 
+# sub directories
+add_subdirectory(terminal_logger)
 add_subdirectory(app)
