--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,13 +1,17 @@
 # Sources and Headers
-set(EXECUTABLE_SOURCE
+set(APP_SOURCES
         "pc-stm32-usb-program-windows.cpp"
 )
 
-set(EXECUTABLE_INCLUDES
-        "./"
+set(APP_HEADERS
+        "pc-stm32-usb-program-windows.h"
 )
 
 add_executable(${EXECUTABLE_NAME}
-        ${EXECUTABLE_SOURCE}
-        ${EXECUTABLE_INCLUDES}
+        ${APP_SOURCES}
+        ${APP_HEADERS}
+)
+
+target_link_libraries(${EXECUTABLE_NAME} PUBLIC
+        ${TERMINAL_LOGGER_NAME}
 )
